added a nice radial gradient background, made most of the text white,centered and made larger the text in the about me section, added more links to the portfolio portion of the site

--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -1,2 +1,14 @@
 *{
-    font-family: 'Quicksand', sans-serif;}
+    font-family: 'Quicksand', sans-serif;
+    overflow: hidden;
+}
+
+body{
+    background: rgb(67,159,5);
+    background: radial-gradient(circle, rgba(67,159,5,1) 39%, rgba(44,224,14,1) 94%, rgba(44,224,14,1) 99%);
+}
+
+a:visited{
+    text-decoration: none;
+    color: White;
+}
