changed portfolio and project components so i can use 2 project components and pass in props for their detailed description

--- a/src/CSS/test.module.css
+++ b/src/CSS/test.module.css
@@ -82,3 +82,12 @@
     float: left;
     margin-left: 100px;
 }
+
+.digimonImg, .hangmanImg{
+    width: 25%;
+    height: 50%;
+}
+
+.project{
+    font-size: 18px;
+}
