made more of the landing page responsive and added the hackathon project, also clicking on a projects image should now take it to the projects home domain

--- a/src/CSS/test.module.css
+++ b/src/CSS/test.module.css
@@ -160,9 +160,20 @@
     
 }
 
+.portfolio{
+    height: 800px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 @media (min-width:684px){
     .bars{
         display: none;
+    }
+    .img{
+        margin-left: auto;
+        width: 300px;
+        height: auto;
     }
 }
 
