--- a/src/CSS/test.module.css
+++ b/src/CSS/test.module.css
@@ -179,6 +179,9 @@
 
 @media (max-width:683px){
     .bars{
+        /*remove display none in order for hamburger menu to show and for its rules to apply*/
+        display: none;
+
         position: fixed;
        
         margin-left: 5%;
@@ -192,10 +195,8 @@
         border: 1px solid red;
         margin-right: 595px;
     } */
-    .svg, .buttonNav{
-        display: none;
-        right: none;
-        
+    .socials{
+        margin-right: 85%;
     }
 }
 
