made teh decision to not use react modal for the burger menu, instead going to use react-burger-menu

--- a/src/CSS/test.module.css
+++ b/src/CSS/test.module.css
@@ -221,3 +221,12 @@
         border-radius: 25%;
     }
 }
+
+@media(max-width: 499px){
+    .socials{
+        display: none;
+    }
+    .bars{
+        display: block;
+    }
+}
