--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -5,7 +5,7 @@
 
 body{
 
-    background: rgb(67,159,5);
+    background: #439f05;
     background: radial-gradient(circle, rgba(67,159,5,1) 39%, rgba(44,224,14,1) 94%, rgba(44,224,14,1) 99%);
 }
 
