made the project/portfolio side of the site more responsive

--- a/src/CSS/Project.module.css
+++ b/src/CSS/Project.module.css
@@ -62,7 +62,7 @@
 
 .photo{
     width: 25%;
-    height: 50%;
+    min-height: fixed;
     float: left;
     margin-right: 15px;
     border-radius: 10%;
@@ -73,23 +73,54 @@
    
 }
 
+
 /*wrtie code for responsive code for the portfolio*/
-@media (max-width:700px){
+@media (max-width:768px){
+   .photo{
+    /* border: 1px solid red; */
+   }
+   .project{
+    /* border: 1px solid red; */
+    padding: 0px;
+    margin-right:10px;
+   }
+}
+
+@media (max-width:540px){
+    .photo{
+        /* border: 1px solid purple; */
+        width: 20%;
+        /* height: 50%; */
+        min-width: 100%;
+    }
+    .description,.projectLink,.endDate{
+        font-size: 20px;
+        font-weight: 500;
+    }
+    .projectLink{
+        /* border: 1px solid white; */
+        font-size: 20px;
+        /* padding-left: 40%; */
+    }
+    .description{
+        margin-right: 0px;
+    }
+    .project{
+        margin-left: 0px;
+    }
    
 }
 
-@media (max-width:685px){
-   
-
-
+@media(max-width:320px){
+    .photo{
+        /* border: 1px solid blue; */
+        min-width: 100%;
+        /* min-height: 50%; */
+    }
+    .description,.projectLink,.endDate{
+        font-size: 20px;
+        
+    }
 }
 
-@media(max-width:683px){
-   
-}
-
-@media (max-width:670px){
-   
-    
-}
 
